# mamie

./: .gitignore  LICENSE  LINKS.md  README.md
draft/: Cropping - Method.ipynb
notebook/: Cropping - Method.ipynb
notebook/.ipynb_checkpoints/: Cropping - Method-checkpoint.ipynb
project/: Contour.py  Mosaic.py  Picture.py  README.md  __init__.py  add_margin_tutorial.py  angles.py  angles_stepbystep.py  constant.py  contour.py  crop.py  erosion_dilatation_tutorial.py  export.py  final.py  main.py  output.py  parse.py  personal_documentation.md  pictures_per_mosaic.csv  process_manual.py  pyproject.toml  rotate.py  rotate_manual.py  rotation_documentation.md  rotation_metadata.csv  test.py  test_detection.py  test_endtoend.py  test_lara.py  testing.py  transfo.py  utils.py  utils_contour.py
project/draft/: photo.py
project/image_processing/: test.py
project/results/: results_contours.csv  results_rotations.csv
project/tutorial/: shapely_polygons.py  trackbar_tutorial.py
project/tutorial_and_testing/: argparse_testing.py  canny_detector_tutorial.py  erosion_dilatation_tutorial.py  houghlines_tutorial.py  show_keys.py  test.py  testing.py  trackbar_tutorial.py
