[tool.poetry]
name = "Contour Detection"
version = "0.1.0"
description = ""
authors = ["Nicolas Bancel <nicolas.bancel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
opencv-python = "^4.7.0"
matplotlib = "^3.6.2"
opencv-contrib-python-rolling = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
ipython = "^8.4.0"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 160
multi_line_output = 3
include_trailing_comma = true
